-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 2
-
None
Qt Creator needs an example manifest for Qt5 (at QT_INSTALL_EXAMPLES/example_manifest.xml (the name of the xml doesn't matter)) to be able to show any examples from qt5 in the welcome page.
- is required for
-
QTBUG-27515 Create and polish the examples
-
- Closed
-
- relates to
-
QTBUG-27802 qt5 doesn't seem to come with the description file for the examples
-
- Closed
-
-
QTBUG-28415 No examples are available via Qt Creator (Welcome/Examples)
-
- Closed
-
-
QTCREATORBUG-8377 Trying Examples from QtCreator, looks for the qt4 examples not the qt5 ones
-
- Closed
-
For Gerrit Dashboard: QTBUG-27801 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
40657,2 | Allow qdocconf to specify where the examples are located in install. | master | qt/qtbase | Status: MERGED | +2 | 0 |
40696,1 | Fix example paths in example manifests that are used by Qt Creator. | master | qt/qtbase | Status: MERGED | +2 | 0 |
40844,1 | Fix filesToOpen in example manifests. | master | qt/qtbase | Status: MERGED | +2 | 0 |